instance1/temp-retrieve/objects/Credit_Card__c/Credit_Card__c.object-meta.xml
<CustomObject>
    <label>Credit Card</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name On Credit Card</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>