instance1/temp-retrieve/objects/Credit_Card__c/fields/Address_Same_As_Billing_Address__c.field-meta.xml
<CustomField>
    <fullName>Address_Same_As_Billing_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address Same As Billing Address</label>
    <type>Checkbox</type>
</CustomField>