instance1/temp-retrieve/objects/Credit_Card__c/fields/Credit_Card_Type__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Type__c</fullName>
    <label>Credit Card Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Visa</fullName>
            </value>
            <value>
                <fullName>Mastercard</fullName>
            </value>
            <value>
                <fullName>Discover</fullName>
            </value>
            <value>
                <fullName>American Express</fullName>
            </value>
            <value>
                <fullName>MC Eurocard</fullName>
            </value>
            <value>
                <fullName>UK Maestro</fullName>
            </value>
            <value>
                <fullName>JCB Card</fullName>
            </value>
            <value>
                <fullName>Diners Club</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>