instance1/temp-retrieve/objects/Credit_Card__c/fields/Credit_Card_Type_Last_4__c.field-meta.xml
<CustomField>
    <fullName>Credit_Card_Type_Last_4__c</fullName>
    <formula>TEXT(Credit_Card_Type__c) + &quot; - &quot; +  Last_4_Digits__c</formula>
    <label>Credit Card Type &amp; Last 4</label>
    <type>Text</type>
</CustomField>