instance1/temp-retrieve/objects/Credit_Card__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>Expiration_Month__c &amp; &quot;/&quot; &amp; Expiration_Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expiration Date</label>
    <type>Text</type>
</CustomField>