instance1/temp-retrieve/objects/Credit_Card__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>State</label>
    <length>225</length>
    <type>Text</type>
</CustomField>