instance1/temp-retrieve/objects/Credit_Card__c/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>