instance1/temp-retrieve/objects/Credit_Card__c/validationRules/Credit_Card_Number_Only_Numbers.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Card_Number_Only_Numbers</fullName>
    <active>true</active>
    <errorConditionFormula>CONTAINS( CreditCardNumber__c , &apos;-&apos;)
||
CONTAINS( CreditCardNumber__c , &apos;,&apos;)</errorConditionFormula>
    <errorDisplayField>Credit_Card_Number_Unencrypted__c</errorDisplayField>
    <errorMessage>Credit Card Number Can Not Contain Dashes Or Commas</errorMessage>
</ValidationRule>