instance1/temp-retrieve/objects/Credit_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Credit_Card_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>